# control-systems

./: .gitignore  01 - The Inverted Pendulum.ipynb  4 Bar.ipynb  Bellman Equation.ipynb  Bird Design.ipynb  Convex Hull.ipynb  Destabilizing LQR.ipynb  Flapping Wing.ipynb  HJB Equation.ipynb  Hamilton Jacobi Bellman Equation.ipynb  Hamilton Jacobi Isaacs Equation.ipynb  Inverted Pendulum.ipynb  Isaac's Equation.ipynb  LMI L Infinity Gain.ipynb  LMI Reach.ipynb  Matrix Calculus.ipynb  Quiz 13.ipynb  README.md  Reachability.ipynb  Reachable Set.ipynb  Segway.ipynb  Untitled0.ipynb  environment.yml  pyproject.toml
.ipynb_checkpoints/: 01 - The Inverted Pendulum-checkpoint.ipynb
papers/reachable-set/tomlin-notes/: AA278A_MILP_Primer.ppt  aa278a.ppt
